--- a/CollateralDamage/CollateralDamage/CollateralDamage.csproj
+++ b/CollateralDamage/CollateralDamage/CollateralDamage.csproj
@@ -75,7 +75,7 @@
     <Reference Include="UnityEngine.CoreModule">
       <Private>False</Private>
     </Reference>
-    <Reference Include="UnityEngine.UI" Publicize="true">
+    <Reference Include="UnityEngine.UI">
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UIModule">
